--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: linear-gradient(rgba(42, 58, 74, 0.84), rgba(42, 58, 74, .85));
+    background-image: url(img/840843081452.jpg);
     background-size: cover;
     background-position: center;
 }
